Fixed spacing of social icons in footer

--- a/css/main.css
+++ b/css/main.css
@@ -235,6 +235,8 @@ footer .social-icons {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  max-width: 250px;
+  margin: 0 auto;
 }
 
 footer .social p{
